
TL/07 Add new dmarc expansion variable $dmarc_domain_policy to directly
      view the policy declared in the DMARC record. Currently, $dmarc_status
      is a combined value of both the record presence and the result of the
      analysis.

JH/13 Fix handling of $tls_cipher et.al. in (non-verify) transport.  Bug 1455.

JH/14 New options dnssec_request_domains, dnssec_require_domains on the
      dnslookup router (applying to the forward lookup).

TL/08 Bugzilla 1453: New LDAP "SERVERS=" option allows admin to override list
      of ldap servers used for a specific lookup.  Patch provided by Heiko
      Schlichting.

JH/18 New options dnssec_lax, dnssec_strict on dnsdb lookups.
      New variable $lookup_dnssec_authenticated for observability.

TL/09 Bugzilla 609: Add -C option to exiqgrep, specify which exim.conf to use.
      Patch submitted by Lars Timman.

JH/19 EXPERIMENTAL_OCSP support under GnuTLS.  Bug 1459.


Exim version 4.82
-----------------

PP/01 Add -bI: framework, and -bI:sieve for querying sieve capabilities.

PP/02 Make -n do something, by making it not do something.
      When combined with -bP, the name of an option is not output.

PP/03 Added tls_dh_min_bits SMTP transport driver option, only honoured
      by GnuTLS.

PP/04 First step towards DNSSEC, provide $sender_host_dnssec for
      $sender_host_name and config options to manage this, and basic check
      routines.

PP/05 DSCP support for outbound connections and control modifier for inbound.

PP/06 Cyrus SASL: set local and remote IP;port properties for driver.
      (Only plugin which currently uses this is kerberos4, which nobody should
      be using, but we should make it available and other future plugins might
      conceivably use it, even though it would break NAT; stuff *should* be
      using channel bindings instead).

PP/07 Handle "exim -L <tag>" to indicate to use syslog with tag as the process
      name; added for Sendmail compatibility; requires admin caller.